Update docs for MartFury Flutter